--- a/extension-config.json
+++ b/extension-config.json
@@ -19,6 +19,19 @@
         "type": "text",
         "required": true
       }
+    },
+    "scrollStyles": {
+      "type": "admin",
+      "destination": "frontend",
+      "default": {
+        "enabled": true,
+        "ratio": 0.6,
+        "styles": null
+      },
+      "params": {
+        "label": "Apply given styles when scroll ratio is reached (bottom shadows, etc.)",
+        "type": "json"
+      }
     }
   },
   "steps": []
