--- a/extension-config.json
+++ b/extension-config.json
@@ -1,11 +1,14 @@
 {
-  "version": "1.1.2",
+  "version": "1.1.4",
   "id": "@shopgate-project/sticky-pdp-media",
   "components": [
     {
       "id": "StickyMedia",
       "path": "frontend/portals/StickyMedia/index.jsx",
-      "target": "component.product-media-section",
+      "target": [
+        "component.product-media-section",
+        "component.product-media-section.tablet-adjustments"
+      ],
       "type": "portals"
     }
   ],
